Добавлено отправление коллекции при добавлении нового события

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script type="text/javascript" src="event.js"></script>
     <script type="text/javascript" src="Events.js"></script>
     <script type="text/javascript" src="validation.js"></script>
+    <script type="text/javascript" src="XHRObject.js"></script>
     <script type="text/javascript" src="documentAction.js"></script>
     <script type="text/javascript">initialise();</script>
 </body>
