--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="field">Напомнить за: <input type="number" id="remindTime" name="remindTime">минут
             </div>
-            <input id="addButton" type="button" value="Добавить событие" onclick="preventDefault();"/>
+            <input id="addButton" type="button" value="Добавить событие"/>
 
         </form>
         <div class="select">
@@ -68,10 +68,9 @@
     <script type="text/javascript" src="model.js"></script>
     <script type="text/javascript" src="collection.js"></script>
     <script type="text/javascript" src="event.js"></script>
-    <script type="text/javascript" src="Events.js"></script>
+    <script type="text/javascript" src="events.js"></script>
     <script type="text/javascript" src="validation.js"></script>
-    <script type="text/javascript" src="XHRObject.js"></script>
+    <script type="text/javascript" src="XHRobject.js"></script>
     <script type="text/javascript" src="documentAction.js"></script>
-    <script type="text/javascript">initialise();</script>
 </body>
 </html>
