Сериализовал данные из функции initTestBase() Добавил кнопки сохранить и загрузить.

--- a/Task/index.html
+++ b/Task/index.html
@@ -130,6 +130,16 @@
                 </div>
             </div>
         </div>
+        <div id = "SaveMenu">
+            <div>
+                <div>Сохранить текущее состояния календаря:</div><input type="button" value="Сохранить">
+             </div>
+        </div>
+        <div id = "ReloadMenu">
+            <div>
+                <div>Загрузить обновления с сервера:</div><input type="button" value= "Загрузить"/>
+             </div>
+        </div>
     </div>
     <table>
         <thead>
