--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
                 <div id = "NewEventTimeInterval">
                     <div>
                         <span class = "TitleAddEvent">Начало</span>
-                        <input type="date" class="StartDate"></input>
+                        <input type="date" class="StartDate"/>
                     </div>
                     <div>
                         <span class = "TitleAddEvent">Конец</span>
-                        <input type="date" class="FinishDate"></input>
+                        <input type="date" class="FinishDate"/>
                     </div>
                 </div>
                 <div id = "NewEventNameLocation">
                     <span class = "TitleAddEvent">Что</span>
-                    <input type="text" class = "ImportantStringField"></input>
+                    <input type="text" class = "ImportantStringField"/>
                 </div>
             </div>
             <div id = "NewEventCoordinate">
                 <span class = "TitleAddEvent">Где? (</span>
-                <input type="text" class = "XCoordinate"></input>
+                <input type="text" class = "XCoordinate"/>
                 <span class = "TitleAddEvent">;</span>
-                <input type="text" class = "YCoordinate"></input>
+                <input type="text" class = "YCoordinate"/>
                 <span class = "TitleAddEvent">)</span>
             </div>
             <div id = "NewEventStars">
                 <span class = "TitleAddEvent">Важность </span>
-                <input type="text" class ="StarsField"></input>
+                <input type="text" class ="StarsField"/>
             </div>
             <div id = "NewEventCost">
                 <span class = "TitleAddEvent">Цена посещения </span>
-                <input type="text" id="costEvent" class ="PositiveNumber"></input>
+                <input type="text" id="costEvent" class ="PositiveNumber"/>
             </div>            
             <div id = "NewEventPartiesList">
                 <div class = "TitleAddEvent">Список участников:</div>
                 <ol>
-                    <li><input type="text"></input></li>
-                    <li><input type="text"></input></li>
-                    <li><input type="text"></input></li>
+                    <li><input type="text"/></li>
+                    <li><input type="text"/></li>
+                    <li><input type="text"/></li>
                 </ol>
                 <div>
-                    <input type="button" value="Добавить еще друга" id = "AddFriend"></input>
+                    <input type="button" value="Добавить еще друга" id = "AddFriend"/>
                 </div>
             </div>
             <div>
-                <input type="button" value="Добавить событие" id = "SubmitNewEventButton"></input>
+                <input type="button" value="Добавить событие" id = "SubmitNewEventButton"/>
             </div>
         </div>
         <div id = "FilterEventList">
@@ -120,12 +120,12 @@
                 <div>
                     <div class = "TitleAddEvent">Участвуют мои друзья</div>
                     <ol id = "FilterFriens">
-                        <li><input type="text"></input></li>
-                        <li><input type="text"></input></li>
-                        <li><input type="text"></input></li>
+                        <li><input type="text"/></li>
+                        <li><input type="text"/></li>
+                        <li><input type="text"/></li>
                     </ol>
                     <div>
-                    <input type="button" value="Добавить еще друга" id = "AddFriendFilterButton"></input>
+                    <input type="button" value="Добавить еще друга" id = "AddFriendFilterButton"/>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 <div>Сохранить текущее состояния календаря:</div><input type="button" value="Сохранить">
              </div>
         </div>
-        <div id = "ReloadMenu">
+        <div id = "LoadMenu">
             <div>
                 <div>Загрузить обновления с сервера:</div><input type="button" value= "Загрузить"/>
              </div>
@@ -166,6 +166,7 @@
         </tbody>
     </table>
 </div>
+<script src="./scripts/ajaxProvaider.js"></script>
 <script src="./scripts/Model.js"></script>
 <script src="./scripts/Event.js"></script>
 <script src="./scripts/Collection.js"></script>
@@ -174,7 +175,7 @@
 <script src="./scripts/DOMValidator.js"></script>
 <script src="./scripts/DOMErrorManager.js"></script>
 <script src="./scripts/CalendaryErrorManager.js"></script>
-<script src="./scripts/Calendary.js"></script>
+<script src="./scripts/calendary.js"></script>
 <script src="./scripts/Run.js"></script>
 </body>
 </html>
