--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
         </tbody>
     </table>
 </div>
-<script src="/scripts/ajaxProvaider.js"></script>
-<script src="/scripts/Model.js"></script>
-<script src="/scripts/Event.js"></script>
-<script src="/scripts/Collection.js"></script>
-<script src="/scripts/BaseEvent.js"></script>
-<script src="/scripts/testData.js"></script>
-<script src="/scripts/DOMValidator.js"></script>
-<script src="/scripts/DOMErrorManager.js"></script>
-<script src="/scripts/CalendaryErrorManager.js"></script>
-<script src="/scripts/calendary.js"></script>
-<script src="/scripts/Run.js"></script>
+<script src="./Scripts/ajaxProvaider.js"></script>
+<script src="./Scripts/Model.js"></script>
+<script src="./scripts/Event.js"></script>
+<script src="./Scripts/Collection.js"></script>
+<script src="./Scripts/BaseEvent.js"></script>
+<script src="./Scripts/testData.js"></script>
+<script src="./Scripts/DOMValidator.js"></script>
+<script src="./Scripts/DOMErrorManager.js"></script>
+<script src="./Scripts/CalendaryErrorManager.js"></script>
+<script src="./Scripts/calendary.js"></script>
+<script src="./Scripts/Run.js"></script>
 </body>
 </html>
