--- a/index.html
+++ b/index.html
@@ -166,16 +166,15 @@
         </tbody>
     </table>
 </div>
-<script src="./Scripts/ajaxProvaider.js"></script>
+<script src="./Scripts/AjaxProvaider.js"></script>
 <script src="./Scripts/Model.js"></script>
-<script src="./scripts/Event.js"></script>
+<script src="./Scripts/Event.js"></script>
 <script src="./Scripts/Collection.js"></script>
 <script src="./Scripts/BaseEvent.js"></script>
-<script src="./Scripts/testData.js"></script>
 <script src="./Scripts/DOMValidator.js"></script>
 <script src="./Scripts/DOMErrorManager.js"></script>
 <script src="./Scripts/CalendaryErrorManager.js"></script>
-<script src="./Scripts/calendary.js"></script>
+<script src="./Scripts/Calendary.js"></script>
 <script src="./Scripts/Run.js"></script>
 </body>
 </html>
