--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <script src="./Scripts/DOMValidator.js"></script>
 <script src="./Scripts/DOMErrorManager.js"></script>
 <script src="./Scripts/CalendaryErrorManager.js"></script>
-<script src="./Scripts/Calendary.js"></script>
-<script src="./Scripts/Run.js"></script>
+<script src="./Scripts/calendary.js"></script>
+<script src="./Scripts/run.js"></script>
 </body>
 </html>
