1. Поправил дурацкий фильтр 2. Автоматическая отправка

--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
             
             <div id = "FIlterDateEventList">
                 <div>
-                    <span>Показать события, которые ...</span>
+                    <span>Показать события, которые начнутся не раньше, чем</span>
                 </div>
                 <div>
                     <span>Вообще есть</span>
                     <input type="radio" name="FilterTimerRadioButtons" value="None" checked>
                 </div>
                 <div>
-                    <span>Будут завтра</span>
+                    <span>С завтра</span>
                     <input type="radio" name="FilterTimerRadioButtons" value="getEventAfterDay">
                 </div>
                 <div>
-                    <span>Будут через неделю</span>
+                    <span>Через неделю</span>
                     <input type="radio" name="FilterTimerRadioButtons" value="getEventAfterWeek">
                 </div>
                 <div>
-                    <span>Будут через месяц</span>
+                    <span>Через месяц</span>
                     <input type="radio" name="FilterTimerRadioButtons" value="getEventAfterMonth" >
                 </div>
             </div>
@@ -129,16 +129,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id = "SaveMenu">
-            <div>
-                <div>Сохранить текущее состояния календаря:</div><input type="button" value="Сохранить">
-             </div>
-        </div>
-        <div id = "LoadMenu">
-            <div>
-                <div>Загрузить обновления с сервера:</div><input type="button" value= "Загрузить"/>
-             </div>
         </div>
     </div>
     <table>
