--- a/form.html
+++ b/form.html
@@ -5,6 +5,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="async.js" type="text/javascript" ></script>
+		<script src="Model.js" type="text/javascript" ></script>
+		<script src="Collection.js" type="text/javascript" ></script>
+		<script src="Event.js" type="text/javascript" ></script>
+		<script src="Events.js" type="text/javascript" ></script>
 	</head> 
 	<body>
   <div class="l-level">
