Подготовка к выполнению задания
Скопировал дз5 как основу для дз6

--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
-<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-</head>
-<body>
-<code id="data">Loading...</code>
-<script>
-// DO NOT USE IT! AT ALL! WRITE YOUR OWN!
-(function(m,u,c,d,x){with(x=new XMLHttpRequest)return onreadystatechange=function(){readyState^4||c(this)},open(m,u,c),send(d),x})
-('get', 'current-event.json', function (xhr) {
-    document.getElementById('data').innerHTML = xhr.responseText;
-});
-</script>
-</body>
+    <head>
+        <title>Выборки</title>
+        <script language="javascript" type="text/jscript" src="Clone.js"></script>
+        <script language="javascript" type="text/jscript" src="Inherits.js"></script>
+        <script language="javascript" type="text/jscript" src="Base/Model.js"></script>
+        <script language="javascript" type="text/jscript" src="Base/Collection.js"></script>
+        <script language="javascript" type="text/jscript" src="Event/Event.js"></script>
+        <script language="javascript" type="text/jscript" src="Event/Events.js"></script>
+        <script language="javascript" type="text/jscript" src="eventFormController.js"></script>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+		<div>	
+			Сортировка событий
+			<select onchange="SortEvents(this);">
+				<option value="raiting">по рейтингу</option>
+				<option value="dateStart">по дате</option>
+				<option value="name">по имени события</option>
+			</select>
+		</div>
+        <div id="myEvents"></div>
+        <form id="eventForm" onsubmit="return onSubmitEventForm();">
+            <div>
+                <span class="inputTitle">Название</span>
+                <input id="eventName" type="text" placeholder="Название события"/>
+            </div>
+            <div>
+                <span class="inputTitle">Адрес</span>
+                <input id="eventAddress" type="text" placeholder="Адрес события" />
+            </div>
+            <div>
+                <span class="inputTitle">Время начала события</span>
+                <input id="eventDateStart" type="date" />
+                <input id="eventTimeStart" type="time" />
+            </div>
+            <div>
+                <span class="inputTitle">Время конца события</span>
+                <input id="eventDateEnd" type="date" />
+                <input id="eventTimeEnd" type="time" />
+            </div>
+            <div id="eventMembers">
+                <span class="inputTitle">Участники</span>
+                <div>
+					<input id="eventMember" type="Text" placeholder="ФИО участника" />
+					<img src="images/add.png" alt="Добавить" align="top" height="27" onclick="AddMember();">
+				</div>
+            </div>
+            <div>
+                <span class="inputTitle">Рэтинг</span>
+                <input id="eventRaiting" type="range" min="1" max="5" />
+            </div>
+            <div>
+                <span class="inputTitle">&nbsp;</span>
+                <input id="eventSubmit" type="submit" value="Добавить событие" />
+            </div>
+        </form>
+    </body>
 </html>
