--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Выборки</title>
         <script language="javascript" type="text/jscript" src="Clone.js"></script>
         <script language="javascript" type="text/jscript" src="Inherits.js"></script>
+        <script language="javascript" type="text/jscript" src="XMLHttpRequestWrapper.js"></script>
         <script language="javascript" type="text/jscript" src="Base/Model.js"></script>
         <script language="javascript" type="text/jscript" src="Base/Collection.js"></script>
         <script language="javascript" type="text/jscript" src="Event/Event.js"></script>
