Загрузка данных с сервера

--- a/index.html
+++ b/index.html
@@ -9,19 +9,44 @@
         <script language="javascript" type="text/jscript" src="Base/Collection.js"></script>
         <script language="javascript" type="text/jscript" src="Event/Event.js"></script>
         <script language="javascript" type="text/jscript" src="Event/Events.js"></script>
-        <script language="javascript" type="text/jscript" src="eventFormController.js"></script>
+        <script language="javascript" type="text/jscript" src="EventFormController.js"></script>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body>
+    <body onload="loadEvents();">
 		<div>	
-			Сортировка событий
-			<select onchange="SortEvents(this);">
-				<option value="raiting">по рейтингу</option>
-				<option value="dateStart">по дате</option>
+			<span class="inputTitle">Сортировка событий</span>
+			<select id="eventSortType">
+				<option value="raiting" selected>по рейтингу</option>
+				<option value="dateStart">по дате начала</option>
 				<option value="name">по имени события</option>
 			</select>
 		</div>
+        <div>
+            <span class="inputTitle">Прошедшие события </span>
+            <input id="lastEvents" type="checkbox" />
+        </div>
+        <div>
+            <span class="inputTitle">Предстоящие события</span>
+            <input id="futureEvents" type="checkbox" />
+        </div>
+        <div>
+            <span class="inputTitle">С участием персоны</span>
+            <input id="withPerson" type="textbox" />
+        </div>
+        <div>
+            <span class="inputTitle">Без участия персоны</span>
+            <input id="withoutPerson" type="textbox" />
+        </div>
+        <div>
+            <span class="inputTitle">Рейтинг больше чем</span>
+            <input id="raitingMore" type="range" min="1" max="5" />
+        </div>
+        <div>
+            <span class="inputTitle">&nbsp;</span>
+            <input type="Button" value="Показать список" onclick="ShowEventList();" />
+        </div>
         <div id="myEvents"></div>
+        <div id="errorInForm" class="error"></div>
         <form id="eventForm" onsubmit="return onSubmitEventForm();">
             <div>
                 <span class="inputTitle">Название</span>
@@ -34,12 +59,12 @@
             <div>
                 <span class="inputTitle">Время начала события</span>
                 <input id="eventDateStart" type="date" />
-                <input id="eventTimeStart" type="time" />
+                <input id="eventTimeStart" type="time" value="00:00" />
             </div>
             <div>
                 <span class="inputTitle">Время конца события</span>
                 <input id="eventDateEnd" type="date" />
-                <input id="eventTimeEnd" type="time" />
+                <input id="eventTimeEnd" type="time" value="00:00" />
             </div>
             <div id="eventMembers">
                 <span class="inputTitle">Участники</span>
@@ -49,7 +74,7 @@
 				</div>
             </div>
             <div>
-                <span class="inputTitle">Рэтинг</span>
+                <span class="inputTitle">Рейтинг</span>
                 <input id="eventRaiting" type="range" min="1" max="5" />
             </div>
             <div>
