Привел регистр названия функций к нужному

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div>
             <span class="inputTitle">&nbsp;</span>
-            <input type="Button" value="Показать список" onclick="ShowEventList();" />
+            <input type="Button" value="Показать список" onclick="showEventList();" />
         </div>
         <div id="myEvents"></div>
         <div id="errorInForm" class="error"></div>
@@ -70,7 +70,7 @@
                 <span class="inputTitle">Участники</span>
                 <div>
 					<input id="eventMember" type="Text" placeholder="ФИО участника" />
-					<img src="images/add.png" alt="Добавить" align="top" height="27" onclick="AddMember();">
+					<img src="images/add.png" alt="Добавить" align="top" height="27" onclick="addMember();">
 				</div>
             </div>
             <div>
